Added missing Week 01 notes. Added Homework 01. Added missing proofs.

--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -2,8 +2,9 @@
 \usepackage{cinvestav_style}
 
 \usepackage[english]{babel}
+% \usepackage{amssymb}  
 
-\title{Dynamic Systems}
+\title{Notes on Dynamic Systems}
 \author{Isaac Ayala Lozano}
 \date{}
     
